--- a/css.html
+++ b/css.html
@@ -1,4 +1,4 @@
-<link href="https://fonts.cdnfonts.com/css/janda-manatee-solid" rel="stylesheet">      
+<link href="https://fonts.cdnfonts.com/css/janda-manatee-solid" rel="stylesheet">
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
   integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -8,7 +8,8 @@
 
 
 <style>
-  :root {
+  :root 
+  {
     --color-azul-claro: #7FB3D5;
     --color-azul-oscuro: #2874A6;
     --color-verde-claro: #D4EFDF;
@@ -29,32 +30,38 @@
     font-family: 'Janda Manatee Solid', sans-serif;
   }
 
-  header {
+  header 
+  {
     background-color: #eee;
   }
 
-  .icono-footer {
+  .icono-footer 
+  {
     font-size: 1.5rem;
     padding: 1rem;
     transition: all .2s ease-in-out;
     transform: scale(1);
   }
 
-  .icono-footer:hover {
+  .icono-footer:hover 
+  {
     color: var(--color-azul-claro);
     transform: scale(1.2);
   }
 
-  .icono-notificacion {
+  .icono-notificacion 
+  {
     font-size: 1.5rem;
     padding: .5rem;
   }
 
-  .div-notificaciones {
+  .div-notificaciones 
+  {
     z-index: 11;
   }
 
-  .subir-arriba {
+  .subir-arriba 
+  {
     background-color: var(--color-gris-claro);
     position: fixed;
     /* fijo */
@@ -70,7 +77,8 @@
     /*que se muestre por encima de la notificacion */
   }
 
-  .img-contacto {
+  .img-contacto 
+  {
     object-fit: cover;
     height: 12rem;
     min-width: 12rem;
@@ -82,14 +90,17 @@
   }
 
   /* CLASES FORMULARIO */
-  .div-datos-form {
+
+  .div-datos-form 
+  {
     height: 20rem;
     width: 20rem;
     margin: 1rem;
 
   }
 
-  .div-img-form {
+  .div-img-form 
+  {
     display: flex;
     position: relative;
     justify-content: center;
@@ -100,7 +111,8 @@
   }
 
 
-  .img-form {
+  .img-form 
+  {
     position: absolute;
     height: 20rem;
     width: 20rem;
@@ -111,7 +123,8 @@
     z-index: 2;
   }
 
-  .lottie-form {
+  .lottie-form 
+  {
     position: absolute;
     height: 20rem;
     width: 20rem;
@@ -120,7 +133,8 @@
     z-index: 1;
   }
 
-  .icono-form {
+  .icono-form 
+  {
     position: absolute;
     color: var(--color-amarillo-claro);
     font-size: 1.5rem;
@@ -129,7 +143,8 @@
     z-index: 3;
   }
 
-  .boton-copiar {
+  .boton-copiar 
+  {
     margin-left: auto;
     font-size: 1.5rem;
   }
@@ -139,9 +154,16 @@
     transform: scale(1.2);
   }
 
+  #imgInfoContacto {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+  }
+
+
   /* ESTILOS ADICIONALES */
 
-  .caja-contacto, .caja-contacto img
+  .caja-contacto, .caja-contacto img 
   {
     position: relative;
     border: .3rem solid var(--color-gris-oscuro);
@@ -149,76 +171,200 @@
     background-color: var(--color-gris-oscuro);
   }
 
-.datos-contacto
-{
-  position: absolute;
-  padding: 0.5rem;
-  background: black;
-  width: 100%;
-  height: 6rem;
-  bottom: 0;
+  .datos-contacto {
+    position: absolute;
+    padding: 0rem;
+    background: black;
+    width: 100%;
+    height: 6rem;
+    bottom: 0;
 
+  }
+
+  .datos-contacto h3 
+  {
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  .datos-contacto span 
+  {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: .4rem;
+  }
+
+  .caja-contacto img 
+  {
+    z-index: 2;
+    transition: all .5s;
+    width: 16rem;
+    height: 16rem;
+    object-fit: cover;
+  }
+
+  .caja-contacto:hover img 
+  {
+    transform: translateY(-6rem);
+  }
+
+  .boton-caja {
+    transform: scale(1);
+    transform: all .4s;
+  }
+
+  .boton-caja:hover 
+  {
+    transform: translateY(10%);
+  }
+
+  /*------------------------------------------------------------------------------------/
+/  E  S  T  I  L  O  --  1   ---------------------------------------------------------/
+/------------------------------------------------------------------------------------*/
+/*
+  .caja-estilo-1 .caja-contacto 
+  {
+
+  }
+
+  */
+
+  /*------------------------------------------------------------------------------------/
+/  E  S  T  I  L  O  --  2   ---------------------------------------------------------/
+/------------------------------------------------------------------------------------*/
+  .caja-estilo-2 .caja-contacto 
+  {
+    overflow: hidden;
+  }
+
+  /*------------------------------------------------------------------------------------/
+/  E  S  T  I  L  O  --  3   ---------------------------------------------------------/
+/------------------------------------------------------------------------------------*/
+.caja-estilo-3 .caja-contacto
+{
+  overflow: hidden;  
 }
-
-.datos-contacto h3
+.caja-estilo-3 .datos-contacto
 {
-  color: white;
-  font-size: 1.5rem;
-}
-
-.datos-contacto span
-{
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: .4rem;
-}
-
-.caja-contacto img
-{
-  z-index: 2;
+  height: 100%;
+  width: 50%;
+  transform: scaleX(0);
+  transform-origin: 0 0;
   transition: all .5s;
-  width: 16rem;
-  height: 16rem;
-  object-fit: cover;
+}
+.caja-estilo-3 .caja-contacto:hover .datos-contacto
+{  
+  transform: scaleX(1);
+  z-index: 2;
+}
+.caja-estilo-3 .caja-contacto:hover img
+{  
+  transform: translateX(30%) scale(1.1);
+  filter: grayscale(100%); 
 }
 
-.caja-contacto:hover img
+
+  /*------------------------------------------------------------------------------------/
+/  E  S  T  I  L  O  --  4   ---------------------------------------------------------/
+/------------------------------------------------------------------------------------*/
+
+.caja-estilo-4 .caja-contacto img
 {
-transform: translateY(-6rem);
+  z-index: 3;
+  transition: all .4s;  
 }
-
-.plantilla-loader
+.caja-estilo-4 .datos-contacto
 {
-  width: 16rem;
-  height: 16rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  border: 1px solid red;
-  border-radius: .5rem;
-  background-color: white;
+  height: 100%;
+  width: 100%;
+  border-radius: .3rem;
+  border: .3rem solid var(--color-gris-oscuro);
+  transition: all .4s;
+  background: linear-gradient(180deg, black 0%, #580900 100%);
+}
+.caja-estilo-4 .caja-contacto:hover img
+{
+  transform: scale(0.6);
+}
+.caja-estilo-4 .caja-contacto:hover  .datos-contacto
+{
+  transform: scale(1.3);
 }
 
-.boton-caja
+  /*------------------------------------------------------------------------------------/
+/  E  S  T  I  L  O  --  5   ---------------------------------------------------------/
+/------------------------------------------------------------------------------------*/
+
+  .caja-estilo-5 .caja-contacto
+{
+  overflow: hidden;  
+}
+.caja-estilo-5 .caja-contacto img
+{
+  transition: all .5s;  
+}
+.caja-estilo-5 .caja-contacto:hover img
+{
+  transform: scale(1.2);  
+  filter: grayscale(100%);
+}
+.caja-estilo-5 .datos-contacto
+{
+  height: 100%;
+  width: 100%;
+  background: none;
+  z-index: 2;
+}
+.caja-estilo-5 .btn
+{
+  transform: scale(0);
+}
+.caja-estilo-5 h3
+{
+  transform: scale(0);
+  text-shadow: .1rem .1rem black;
+  transition: all .5s;
+}
+.caja-estilo-5 .caja-contacto:hover .btn,
+.caja-estilo-5 .caja-contacto:hover h3
 {
   transform: scale(1);
-  transform: all .4s0;
 }
-
-.boton-caja:hover
+/*ANIMACION DE BOTONES ESCALONADA*/
+.caja-estilo-5 .caja-contacto:hover .btn:nth-child(1)
 {
-  transform: translateY(10%);
+  transition-delay: .10s;
+}
+.caja-estilo-5 .caja-contacto:hover .btn:nth-child(2)
+{
+  transition-delay: .4s;
+}
+.caja-estilo-5 .caja-contacto:hover .btn:nth-child(3)
+{
+  transition-delay: .2s;
 }
 
+  /*------------------------------------------------------------------------------------/
+/  ------PLANTILAS LOADERS    ---------------------------------------------------------/
+/------------------------------------------------------------------------------------*/
 
 
+  /* <<<<<<<<<<<<<<<LOADER TIPO ANILLO>>>>>>>>>>>>>>*/
+
+  .plantilla-loader {
+    width: 16rem;
+    height: 16rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid red;
+    border-radius: .5rem;
+    background-color: white;
+  }
 
 
-
-
-  /* LOADER ANILLO*/
   .lds-ring {
     display: inline-block;
     position: relative;
@@ -261,7 +407,7 @@ transform: translateY(-6rem);
     }
   }
 
-  /* LOADER TIPO PUNTOS*/
+  /* <<<<<<<<<<<<<<<LOADER TIPO PUNTOS>>>>>>>>>>>>>>*/
 
   .lds-ellipsis {
     display: inline-block;
